- internal: changed is_banned() again: cptr,sptr -> sptr (dropped cptr). It was too
  confusing (and thus causing bad code/bugs) and was never used anyway.
- Added a function join_channel which will make it easier for module coders to force users
  to join a channel
- Made it possible to compile the win32 version with libcurl support
- Updated the win32 TRE lib/dll to the latest version (0.6.3)
- Fixed a PATH_MAX vs MAX_PATH problem
- Fixed a bug where if a Mod_Load returned MOD_FAILED, the module was not removed (#0001426)
  reported by AngryWolf
- Fixed a bunch of oper fdlist bugs regarding locops
- Fixed a couple of minor typos in the source
- Removed the old configure checks for pthreads
- Added configure/Config stuff for libcurl
- Added a ./curlinstall script to help with installing curl (Read INSTALL.REMOTEINC for
  more information).
- Added code to make remote includes able to use SSL (HTTPS/FTPS) if SSL support is enabled
- Fixed a remote include bug with rehashing when no remote includes were loaded
- Fixed a remote include compile bug on Linux regarding url.h
- Fixed a remote include compile bug regarding ares (#0001458) reported by mustapha88
- Made the tmp/ directory cleaned up better
- Added some additional warnings for insane large values for allow::maxperip, and class::*
  stuff. Reported by Erik_Rana (#0001463).
- Fixed a bug with /rehash and cached remote includes reported by mustapha88
- internal: Modified TKL system (getting ready for anti-spam system):
  Instead of 1 big list of *lines, it's now an array to easily distinct between types.
  Also made tk->usermask static (USERLEN+2) instead of dynamic.
  These changes should give enough speed improvement to make the new anti-spam/anti-ads
  feature fast enough.
- Updated the TRE library source to 0.6.3 (not yet used)
- Updated the win32 TRE lib/dll to 0.6.4
- Updated the TRE library source to 0.6.4 (yup, a release right after I do the last upgrade!)